# SG-D3QN

./: .gitignore  README.md  setup.py  sgdqn_requirments.txt
crowd_nav/: record  ros_inter.py  run_experiments.sh  run_experiments_main.sh  run_experiments_main2.sh  run_experiments_mprl.sh  run_experiments_mprl_2.sh  run_experiments_sarl.sh  run_experiments_td3.sh  run_experiments_td3rl.sh  run_experiments_tsrl.sh  run_experiments_tsrl_2.sh  run_false.sh  run_true.sh  test.py  test_model.py  testrospy3.py  train.py  train_on_server.py  tsrl5humannoh.out
crowd_nav/SG-DQN/: run_experiments_mprl_10.sh  run_experiments_td3rl.sh  run_experiments_tsrl.sh
crowd_nav/configs/icra_benchmark/: config.py  mp_separate.py  mp_separate_dp.py  td3.py  ts_separate.py
crowd_nav/policy/: TD3_rl.py  actor.py  cadrl.py  critic.py  gat_predictive_rl.py  graph_model.py  helpers.py  model_predictive_rl.py  multi_human_rl.py  policy_factory.py  reward_estimate.py  sarl.py  state_predictor.py  tree_searchrl.py  value_estimator.py
crowd_nav/utils/: explorer.py  trainer.py
crowd_sim/envs/: crowd_sim.py
crowd_sim/envs/policy/: orca.py  policy.py
crowd_sim/envs/utils/: human.py  info.py  robot.py  state.py
src/sgdqn_common/: CMakeLists.txt  package.xml
src/sgdqn_common/msgs/: ActionCmd.msg  AgentVel.msg  ObserveInfo.msg  PedState.msg  VelInfo.msg
